--- a/carousel-Oct2/carousel/index.html
+++ b/carousel-Oct2/carousel/index.html
@@ -1,37 +1,37 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-    <title>Carousel</title>
+        <title>Carousel</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-    <!-- Custom styles for this template -->
-    <link href="carousel.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
-</head>
+        <!-- Custom styles for this template -->
+        <link href="/static/carousel.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous"/>
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
+    </head>
 
-<body>
+    <body>
 
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#">Carousel</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-            <div class="collapse navbar-collapse al-tabs" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <!--<li class="nav-item">
+        <header>
+            <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+                <a class="navbar-brand" href="#">Carousel</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse al-tabs" id="navbarCollapse">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <!--<li class="nav-item">
                         <a class="nav-link" href="#f1">Timestuff</a>
                         </li>
                         <li class="nav-item">
@@ -109,14 +109,19 @@
 
         <div id="tabs" class="al-tabs">
             <ul>
-                <li><a href="#f1">USA Time</a></li>
+                <li>
+                    <a href="#f1">USA Time</a>
+                </li>
                 <!--          <li><a href="#f2">Second Section</a></li>-->
-                <li><a href="#f3">Data Analysis</a></li>
-                <li><a href="#f4">Meet the Team</a></li>
+                <li>
+                    <a href="#f3">Data Analysis</a>
+                </li>
+                <li>
+                    <a href="#f4">Meet the Team</a>
+                </li>
             </ul>
             <div id="f1">
-                <iframe src="https://www.time.gov/" width="100%" height="600">
-              </iframe>
+                <iframe src="https://www.time.gov/" width="100%" height="600"></iframe>
             </div>
 
             <!-- Marketing messaging and featurettes
@@ -297,28 +302,30 @@
                         <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                         <h2>Juan Castellanos</h2>
                         <p>A native of El Salvador, Juan is a senior at Georgia Tech. He is active in his community and aspires to impact the world through service and politics.</p>
-                        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                        <p>
+                            <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
+                        </p>
                     </div>
                     <!-- /.col-lg-4 -->
                     <div class="col-lg-4">
                         <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                         <h2>Audrey Lawrence</h2>
                         <p>Audrey actively works to impact social engagement and involvement through the sharing of information. She is actively involved in voter participation activities as behind the scenes support.</p>
-                        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                        <p>
+                            <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
+                        </p>
                     </div>
                     <!-- /.col-lg-4 -->
                     <div class="col-lg-4">
                         <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                         <h2>Michael Rucker</h2>
                         <p>Michael is an voracious reader and dedicated husband and father. He spends his days troubleshooting code and solving the world's problems from his computer.</p>
-                        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                        <p>
+                            <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
+                        </p>
                     </div>
                     <!-- /.col-lg-4 -->
                 </div>
-
-
-
-
 
                 <!-- /END THE FEATURETTES -->
 
@@ -327,10 +334,11 @@
         </div>
         <!-- /#tabs -->
 
-
         <!-- FOOTER -->
         <footer class="container">
-            <p class="float-right"><a href="#">Back to top</a></p>
+            <p class="float-right">
+                <a href="#">Back to top</a>
+            </p>
             <p>&copy; 2020 Team Multi-Axial, Georgia Tech &middot;
                 <a href="#"></a> &middot;
                 <a href="#"></a>
@@ -348,7 +356,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous"></script>
     <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
-    <script src="dist/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <script src="assets/js/vendor/holder.min.js"></script>
     <script src="assets/js/carousel.js"></script>
